--- a/AspireSample/AspireSample.ApiService/appsettings.json
+++ b/AspireSample/AspireSample.ApiService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WeatherClient": {
+    "BaseAddress": "https://api.tomorrow.io",
+    "ApiKey": "YOUR_API_KEY"
+  }
 }
