step3: add external api

--- a/AspireSample/AspireSample.ApiService/appsettings.Development.json
+++ b/AspireSample/AspireSample.ApiService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "WeatherClient": {
+    "ApiKey": "vRYAD7CeqjfPl4BFm7kscUyUhJGNNgWc"
   }
 }
